--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@
         <script src="script.js" async defer></script>
     </head>
     <body>
-
-        
+        <div id="display">this is the display</div>
+        <div class="buttons">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+        </div>
+        <div class="operator">
+            <button>+</button>
+            <button>-</button>
+            <button>x</button>
+            <button>÷</button>
+        </div>
+        <button id="equal">=</button>
         
     </body>
 </html>
