added id to buttons

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <script src="script.js" async defer></script>
     </head>
     <body>
-        <div id="display">this is the display</div>
+        <div id="display"></div>
         <div class="buttons">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six" >6</button>
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
         </div>
         <div class="operator">
             <button>+</button>
@@ -30,6 +30,7 @@
             <button>÷</button>
         </div>
         <button id="equal">=</button>
+        <button id="clear">clear</button>
         
     </body>
 </html>
