--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button id="nine">9</button>
         </div>
         <div class="operator">
-            <button>+</button>
+            <button id="add">+</button>
             <button>-</button>
             <button>x</button>
             <button>÷</button>
