--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
     </head>
     <body>
         <div id="display"></div>
-        <div class="buttons">
-            <button id="one">1</button>
-            <button id="two">2</button>
-            <button id="three">3</button>
-            <button id="four">4</button>
-            <button id="five">5</button>
-            <button id="six" >6</button>
-            <button id="seven">7</button>
-            <button id="eight">8</button>
-            <button id="nine">9</button>
+        <div class="number-buttons">
+            <button id="zero" class="number">0</button>
+            <button id="one" class="number">1</button>
+            <button id="two" class="number">2</button>
+            <button id="three" class="number">3</button>
+            <button id="four" class="number">4</button>
+            <button id="five" class="number">5</button>
+            <button id="six" class="number">6</button>
+            <button id="seven" class="number">7</button>
+            <button id="eight" class="number">8</button>
+            <button id="nine" class="number">9</button>
         </div>
-        <div class="operator">
-            <button id="add">+</button>
-            <button>-</button>
-            <button>x</button>
-            <button>÷</button>
+        <div class="operator-buttons">
+            <button id="add" class="operator">+</button>
+            <button id="subtract" class="operator">-</button>
+            <button id="multiply" class="operator">x</button>
+            <button id="divide" class="operator">÷</button>
         </div>
         <button id="equal">=</button>
         <button id="clear">clear</button>
