--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <script src="script.js" async defer></script>
     </head>
     <body>
+        <h1>calculator</h1>
+        <h3>by afyq eyzar</h3>
+    
         <div id="display"></div>
         <div class="number-buttons">
             <button id="zero" class="number">0</button>
