added decimal point function

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             <button id="multiply" class="operator">x</button>
             <button id="divide" class="operator">÷</button>
         </div>
-        <button id="equal">=</button>
+        <div>
+            <button id="decimal">.</button>
+            <button id="equal">=</button>
+        </div>
         <button id="clear">clear</button>
         
     </body>
